# zaaw_met_prog

./: README.md
etap_0/: debug_przyklad.tgz
etap_0/debug_przyklad/: Makefile
etap_0/debug_przyklad/src/: main.cpp
etap_02/zalazek-xmlinterp4config-cmake/: CMakeLists.txt
etap_1/: zalazek.tgz
etap_1/program/: CMakeLists.txt  test_preproc.spr
etap_1/program/inc/: LibInterface.hh  preprocesor.hh
etap_1/program/plugin/: CMakeLists.txt
etap_1/program/src/: LibInterface.cpp  main.cpp  preprocesor.cpp
etap_2/klient/src/: klient.cpp
etap_2/serwer-z-tlem-Qt6/: serwer_graficzny
etap_2/serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/: Makefile  libQGLViewer-qt5.prl  libQGLViewer-qt6.prl  libQGLViewer-qt6.so.2.9.1  ui_ImageInterface.h  ui_VRenderInterface.h
etap_2/serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/.moc/: moc_camera.cpp  moc_frame.cpp  moc_keyFrameInterpolator.cpp  moc_manipulatedCameraFrame.cpp  moc_manipulatedFrame.cpp  moc_qglviewer.cpp
etap_2/serwer-z-tlem-Qt6/libQGLViewer/QGLViewer/VRender/: gpc.cpp
etap_2/serwer-z-tlem-Qt6/libQGLViewer/examples/contribs/dvonn/: board.cpp  drawer.cpp  dvonnviewer.cpp  dvonnwindowimpl.cpp  game.cpp
etap_2/serwer-z-tlem-Qt6/libQGLViewer/examples/contribs/quarto/: glview.cpp  quarto.cpp
etap_2/serwer-z-tlem-Qt6/serwer_zrodla/: Makefile.app
etap_2/serwer-z-tlem-Qt6/serwer_zrodla/inc/: gtsDebug.hh
etap_2/serwer-z-tlem-Qt6/serwer_zrodla/src/: gsv-GraphicsWindow.cpp  gsv-WgViewer3D.cpp
etap_2/zalazek-xmlinterp4config-cmake/: CMakeLists.txt
etap_2/zalazek-xmlinterp4config-cmake/src/: xmlinterp.cpp
etap_4/zad4-pomoc/package-interp4cmds/: configure.ac
etap_4/zad4-pomoc/package-interp4cmds-2libs/inc/: wspolny_plik.hh
etap_4/zad4-pomoc/package-interp4cmds/src/: main.cpp
program/: CMakeLists.txt  INSTALL.md  README.md  config.xml  skrypt (copy).spr  skrypt.spr
program/inc/: AbstractComChannel.hh  AbstractInterp4Command.hh  ComChannel.hh  Configuration.hh  Cuboid.hh  Scene.hh  preprocesor.hh  xmlinterp.hh
program/plugin/: CMakeLists.txt
program/plugin/inc/: Interp4Move.hh  Interp4Pause.hh  Interp4Rotate.hh  Interp4Set.hh
program/plugin/src/: Interp4Move.cpp  Interp4Pause.cpp  Interp4Rotate.cpp  Interp4Set.cpp
program/src/: ComChannel.cpp  main.cpp  preprocesor.cpp  xmlinterp.cpp
